force-app/main/default/objects/AssetsAndLiabilities__c/AssetsAndLiabilities__c.object-meta.xml
<CustomObject>
    <label>AssetsAndLiabilities</label>
    <nameField>
        <label>AssetsAndLiabilities</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AssetsAndLiabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>