force-app/main/default/objects/AssetsAndLiabilities__c/fields/Approximate_Remaining_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Remaining_Term_Years__c</fullName>
    <label>Approximate Remaining Term Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>