force-app/main/default/objects/AssetsAndLiabilities__c/fields/Asset_to_Liability__c.field-meta.xml
<CustomField>
    <fullName>Asset_to_Liability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset to Liabilities</label>
    <referenceTo>AssetsAndLiabilities__c</referenceTo>
    <relationshipLabel>AssetsAndLiabilities</relationshipLabel>
    <relationshipName>AssetsAndLiabilities</relationshipName>
    <type>Lookup</type>
</CustomField>