force-app/main/default/objects/AssetsAndLiabilities__c/fields/AssetsAndLiabilitiesSource__c.field-meta.xml
<CustomField>
    <fullName>AssetsAndLiabilitiesSource__c</fullName>
    <label>AssetsAndLiabilitiesSource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yodlee</fullName>
            </value>
            <value>
                <fullName>Manual Entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>