force-app/main/default/objects/AssetsAndLiabilities__c/fields/AssetsAndLiabilitiesType__c.field-meta.xml
<CustomField>
    <fullName>AssetsAndLiabilitiesType__c</fullName>
    <label>AssetsAndLiabilitiesType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Loan</fullName>
            </value>
            <value>
                <fullName>Home Loan/Mortgage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Automobile</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Jewelry</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle</fullName>
            </value>
            <value>
                <fullName>Bank Account</fullName>
            </value>
            <value>
                <fullName>Home Contents</fullName>
            </value>
            <value>
                <fullName>HECS/HELP</fullName>
            </value>
            <value>
                <fullName>Child support</fullName>
            </value>
            <value>
                <fullName>Investment Property</fullName>
            </value>
            <value>
                <fullName>Car Loan</fullName>
            </value>
            <value>
                <fullName>Superannuation</fullName>
            </value>
            <value>
                <fullName>Credit Card / Store Card</fullName>
            </value>
            <value>
                <fullName>Commercial Property</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>Payday Loan</fullName>
            </value>
            <value>
                <fullName>Car Lease</fullName>
            </value>
            <value>
                <fullName>Merchant Credit (zip pay / afterpay / certigy)</fullName>
            </value>
            <value>
                <fullName>Shares Portfolio</fullName>
            </value>
            <value>
                <fullName>Collectibles</fullName>
            </value>
            <value>
                <fullName>Margin Loan</fullName>
            </value>
            <value>
                <fullName>Overdraft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>