force-app/main/default/objects/AssetsAndLiabilities__c/fields/Bank_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Type__c</fullName>
    <label>Bank Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Term deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>