force-app/main/default/objects/AssetsAndLiabilities__c/fields/Fixed_Rate_Months_to_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate_Months_to_expiry__c</fullName>
    <formula>IF( ISPICKVAL(Rate_Type__c, &quot;Fixed&quot;) , ( DATEVALUE(CreatedDate) + Rate_Expires_in_Years__c * 365 + Rate_Expires_in_Months__c * 30 - TODAY() ) / 30 , NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Rate Months to expiry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>