force-app/main/default/objects/AssetsAndLiabilities__c/fields/Is_Address_Same__c.field-meta.xml
<CustomField>
    <fullName>Is_Address_Same__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Address Same</label>
    <type>Checkbox</type>
</CustomField>