force-app/main/default/objects/AssetsAndLiabilities__c/fields/JointOwner__c.field-meta.xml
<CustomField>
    <fullName>JointOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JointOwner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AssetsAndLiabilities (JointOwner)</relationshipLabel>
    <relationshipName>AssetsAndLiabilities1</relationshipName>
    <type>Lookup</type>
</CustomField>