force-app/main/default/objects/AssetsAndLiabilities__c/fields/Monthly_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Calculation__c</fullName>
    <formula>IF(ISPICKVAL(Repayment_Frequency__c ,&quot;Weekly&quot;), Monthly_Repayment__c *52/12,
IF(ISPICKVAL(Repayment_Frequency__c ,&quot;Fortnightly&quot;), Monthly_Repayment__c *26/12,
IF(ISPICKVAL(Repayment_Frequency__c ,&quot;Monthly&quot;), Monthly_Repayment__c,
IF(ISPICKVAL(Repayment_Frequency__c ,&quot;Annually&quot;), Monthly_Repayment__c/12,
Monthly_Repayment__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>