force-app/main/default/objects/AssetsAndLiabilities__c/fields/Monthly_Rental_Income_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rental_Income_Calculation__c</fullName>
    <formula>Rental_Amount__c * IF(ISPICKVAL(Rental_Frequency__c, &quot;Weekly&quot;) , 52, IF(ISPICKVAL(Rental_Frequency__c, &quot;Fortnightly&quot;), 26, IF(ISPICKVAL(Rental_Frequency__c, &quot;Monthly&quot;), 12, 1))) / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Rental Income Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>