force-app/main/default/objects/AssetsAndLiabilities__c/fields/Monthly_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Repayment__c</fullName>
    <label>Monthly Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>