force-app/main/default/objects/AssetsAndLiabilities__c/fields/Monthly_Repayment_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Repayment_Calculation__c</fullName>
    <formula>(Monthly_Repayment__c + Pre_tax_lease_Payment__c + Post_tax_lease_Payment__c) * IF(ISPICKVAL(Repayment_Frequency__c, &quot;Weekly&quot;) , 52, IF(ISPICKVAL(Repayment_Frequency__c, &quot;Fortnightly&quot;), 26, IF(ISPICKVAL(Repayment_Frequency__c, &quot;Monthly&quot;), 12, 1))) / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Repayment Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>