force-app/main/default/objects/AssetsAndLiabilities__c/fields/Other_Ownership_Share__c.field-meta.xml
<CustomField>
    <fullName>Other_Ownership_Share__c</fullName>
    <label>Other Ownership Share</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>