force-app/main/default/objects/AssetsAndLiabilities__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Applicant 2</fullName>
            </value>
            <value>
                <fullName>Joint (non-applicant)</fullName>
            </value>
            <value>
                <fullName>Joint with Spouse</fullName>
            </value>
            <value>
                <fullName>Applicant 1</fullName>
            </value>
            <value>
                <fullName>Joint with other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>