force-app/main/default/objects/AssetsAndLiabilities__c/fields/OwnerType__c.field-meta.xml
<CustomField>
    <fullName>OwnerType__c</fullName>
    <label>OwnerType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>