force-app/main/default/objects/AssetsAndLiabilities__c/fields/Post_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Post_Payment_Frequency__c</fullName>
    <label>Post Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>