force-app/main/default/objects/AssetsAndLiabilities__c/fields/Pre_tax_lease_Payment__c.field-meta.xml
<CustomField>
    <fullName>Pre_tax_lease_Payment__c</fullName>
    <label>Pre tax lease Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>