force-app/main/default/objects/AssetsAndLiabilities__c/fields/PrimaryOwner__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PrimaryOwner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AssetsAndLiabilities (PrimaryOwner)</relationshipLabel>
    <relationshipName>AssetsAndLiabilities2</relationshipName>
    <type>Lookup</type>
</CustomField>