force-app/main/default/objects/AssetsAndLiabilities__c/fields/Property_Managed_By__c.field-meta.xml
<CustomField>
    <fullName>Property_Managed_By__c</fullName>
    <label>Property Managed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privately</fullName>
            </value>
            <value>
                <fullName>By a real estate agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>