force-app/main/default/objects/AssetsAndLiabilities__c/fields/Property_Situation__c.field-meta.xml
<CustomField>
    <fullName>Property_Situation__c</fullName>
    <label>Property Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own outright</fullName>
            </value>
            <value>
                <fullName>Own with mortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>