force-app/main/default/objects/AssetsAndLiabilities__c/fields/Rate_Expires_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Rate_Expires_in_Months__c</fullName>
    <label>Rate Expires in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>