force-app/main/default/objects/AssetsAndLiabilities__c/fields/Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Type__c</fullName>
    <label>Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interest only</fullName>
            </value>
            <value>
                <fullName>Principal and interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>