force-app/main/default/objects/AssetsAndLiabilities__c/fields/Salary_sacrifice_any_of_the_payments__c.field-meta.xml
<CustomField>
    <fullName>Salary_sacrifice_any_of_the_payments__c</fullName>
    <label>Salary sacrifice any of the payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>