force-app/main/default/objects/AssetsAndLiabilities__c/fields/SourceSystemId__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemId__c</fullName>
    <label>SourceSystemId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>