force-app/main/default/objects/AssetsAndLiabilities__c/fields/Type_of_Fund__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Fund__c</fullName>
    <label>Type of Fund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Retail fund</fullName>
            </value>
            <value>
                <fullName>Self-managed super fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>