force-app/main/default/objects/AssetsAndLiabilities__c/fields/Type_of_Tenancy__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Tenancy__c</fullName>
    <label>Type of Tenancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent lease</fullName>
            </value>
            <value>
                <fullName>Holiday / corporate letting</fullName>
            </value>
            <value>
                <fullName>Airbnb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>