force-app/main/default/objects/AssetsAndLiabilities__c/recordTypes/Liability.recordType-meta.xml
<RecordType>
    <fullName>Liability</fullName>
    <active>true</active>
    <label>Liability</label>
</RecordType>