force-app/main/default/objects/AssetsAndLiabilities__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>AssetsAndLiabilitiesSource__c</columns>
    <columns>AssetsAndLiabilitiesType__c</columns>
    <columns>Description__c</columns>
    <columns>OwnerType__c</columns>
    <columns>Ownership__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>